objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Article_Confidence__c</fullName>
        <label>Article Confidence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Work in Progress</fullName>
                    <default>true</default>
                    <label>Work in Progress</label>
                </value>
                <value>
                    <fullName>Not Validated</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_Type_Icon_URL__c</fullName>
        <formula>CASE(RecordType.Name, 
&quot;FAQ&quot;, &quot;https://i.imgur.com/w0mVY5v.png&quot;, 
&quot;Cirrus&quot;, &quot;https://i.imgur.com/hxH3qeq.png&quot;,
&quot;https://i.imgur.com/hxH3qeq.png&quot;)</formula>
        <inlineHelpText>Provides a URL to an icon representing the type of knowledge article.</inlineHelpText>
        <label>Article Type Icon URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chat_Answer__c</fullName>
        <label>Chat Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FAQ_Answer__c</fullName>
        <label>Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FAQ_External_ID__c</fullName>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAQ_Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FAQ_Question__c</fullName>
        <label>Question</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Featured_in_Communities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicated whether this article should be featured in the org&apos;s communities CMS collections.</description>
        <inlineHelpText>Indicated whether this article should be featured in the org&apos;s communities CMS collections.</inlineHelpText>
        <label>Featured in Communities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KCSArticle_Cause__c</fullName>
        <description>Explains the root cause of the issue.</description>
        <label>Cause</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KCSArticle_Environment__c</fullName>
        <description>Provides details on the environment where the customer is experiencing the issue.</description>
        <label>Environment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KCSArticle_Issue__c</fullName>
        <description>Describes the issue the customer is encountering.</description>
        <label>Issue</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KCSArticle_Resolution__c</fullName>
        <description>Describes the steps taken to resolve this issue.</description>
        <label>Resolution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OpenGraph_Image__c</fullName>
        <label>OpenGraph Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenGraph_Type__c</fullName>
        <label>OpenGraph Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenGraph_Url__c</fullName>
        <label>OpenGraph Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_Revision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Revision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Commerce_Visible_in_Commerce_Sites__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible in Commerce Sites</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gps_Image__c</fullName>
        <label>Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>gps_Is_Top_Ten_LPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Top Ten LPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gps_Is_a_Top_10_FAQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is a Top 10 FAQ</label>
        <type>Checkbox</type>
    </fields>
    <label>Knowledge</label>
    <listViews>
        <fullName>Emergency_Response</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ABSTRACT</field>
            <operation>contains</operation>
            <value>Emergency Response</value>
        </filters>
        <label>Emergency Response</label>
    </listViews>
    <listViews>
        <fullName>SDO_Archived_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <label>Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>SDO_B2B_Customer_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>FIRST_PUBLISHED_DATE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>OpenGraph_Image__c</columns>
        <columns>OpenGraph_Url__c</columns>
        <columns>ABSTRACT</columns>
        <columns>URL_NAME</columns>
        <columns>Article_Type_Icon_URL__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>IS_CHANNEL_PKB</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Public Knowledge Articles</label>
    </listViews>
    <listViews>
        <fullName>SDO_Commerce_FAQs</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>URL_NAME</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.SDO_Knowledge_FAQ</value>
        </filters>
        <filters>
            <field>SDO_Commerce_Visible_in_Commerce_Sites__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Commerce FAQs</label>
    </listViews>
    <listViews>
        <fullName>SDO_Customer_FAQs</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>FIRST_PUBLISHED_DATE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>ABSTRACT</columns>
        <columns>URL_NAME</columns>
        <columns>Article_Type_Icon_URL__c</columns>
        <columns>Featured_in_Communities__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>IS_CHANNEL_PKB</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <filters>
            <field>IS_CHANNEL_CSP</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.SDO_Knowledge_FAQ</value>
        </filters>
        <label>Customer FAQs</label>
    </listViews>
    <listViews>
        <fullName>SDO_Customer_Facing_Knowledge_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>FIRST_PUBLISHED_DATE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>OpenGraph_Image__c</columns>
        <columns>OpenGraph_Url__c</columns>
        <columns>ABSTRACT</columns>
        <columns>URL_NAME</columns>
        <columns>Article_Type_Icon_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>IS_CHANNEL_PKB</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <filters>
            <field>IS_CHANNEL_CSP</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Customer-Facing Knowledge Articles</label>
    </listViews>
    <listViews>
        <fullName>SDO_Draft_Articles</fullName>
        <columns>TITLE</columns>
        <columns>OWNER_ID</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <columns>Article_Confidence__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>SDO_Experience_Installation_KAs</fullName>
        <columns>TITLE</columns>
        <columns>FAQ_External_ID__c</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>ABSTRACT</columns>
        <columns>IS_CHANNEL_CSP</columns>
        <columns>IS_CHANNEL_PRM</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>IS_CHANNEL_PKB</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <filters>
            <field>Topics</field>
            <operation>includes</operation>
            <value>Installation</value>
        </filters>
        <label>Installation KAs</label>
    </listViews>
    <listViews>
        <fullName>SDO_Experience_Maintenance_KAs</fullName>
        <columns>TITLE</columns>
        <columns>FAQ_External_ID__c</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>ABSTRACT</columns>
        <columns>IS_CHANNEL_CSP</columns>
        <columns>IS_CHANNEL_PRM</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>IS_CHANNEL_PKB</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <filters>
            <field>Topics</field>
            <operation>includes</operation>
            <value>Maintenance</value>
        </filters>
        <label>Maintenance KAs</label>
    </listViews>
    <listViews>
        <fullName>SDO_Experience_Solar_Panel_KAs</fullName>
        <columns>TITLE</columns>
        <columns>FAQ_External_ID__c</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>ABSTRACT</columns>
        <columns>IS_CHANNEL_CSP</columns>
        <columns>IS_CHANNEL_PRM</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>IS_CHANNEL_PKB</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>contains</operation>
            <value>Solar</value>
        </filters>
        <label>Solar Panel KAs</label>
    </listViews>
    <listViews>
        <fullName>SDO_Experience_Support_KAs</fullName>
        <columns>TITLE</columns>
        <columns>FAQ_External_ID__c</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>ABSTRACT</columns>
        <columns>IS_CHANNEL_CSP</columns>
        <columns>IS_CHANNEL_PRM</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>IS_CHANNEL_PKB</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <filters>
            <field>Topics</field>
            <operation>includes</operation>
            <value>Support</value>
        </filters>
        <label>Support KAs</label>
    </listViews>
    <listViews>
        <fullName>SDO_Experience_Wind_KAs</fullName>
        <columns>TITLE</columns>
        <columns>FAQ_External_ID__c</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>ABSTRACT</columns>
        <columns>IS_CHANNEL_CSP</columns>
        <columns>IS_CHANNEL_PRM</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>IS_CHANNEL_PKB</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <filters>
            <field>Topics</field>
            <operation>includes</operation>
            <value>wind</value>
        </filters>
        <label>Wind KAs</label>
    </listViews>
    <listViews>
        <fullName>SDO_FAQ_Articles</fullName>
        <columns>TITLE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>Article_Confidence__c</columns>
        <columns>ABSTRACT</columns>
        <columns>Featured_in_Communities__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.SDO_Knowledge_FAQ</value>
        </filters>
        <label>FAQ Articles</label>
    </listViews>
    <listViews>
        <fullName>SDO_Featued_Knowledge_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>FIRST_PUBLISHED_DATE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>ABSTRACT</columns>
        <columns>URL_NAME</columns>
        <columns>Article_Type_Icon_URL__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>IS_CHANNEL_PKB</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <filters>
            <field>Featured_in_Communities__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Featured Knowledge Articles</label>
    </listViews>
    <listViews>
        <fullName>SDO_KCS_Articles</fullName>
        <columns>TITLE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>Article_Confidence__c</columns>
        <columns>KCSArticle_Issue__c</columns>
        <columns>KCSArticle_Environment__c</columns>
        <columns>KCSArticle_Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.SDO_Knowledge_KCSArticle</value>
        </filters>
        <label>KCS Articles</label>
    </listViews>
    <pluralLabel>Knowledge</pluralLabel>
    <recordTypes>
        <fullName>SDO_Knowledge_Cirrus</fullName>
        <active>true</active>
        <label>Cirrus</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDO_Knowledge_FAQ</fullName>
        <active>true</active>
        <label>FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDO_Knowledge_KCSArticle</fullName>
        <active>true</active>
        <label>KCSArticle</label>
    </recordTypes>
</CustomObject>